--- a/prefs/prefs.prefs
+++ b/prefs/prefs.prefs
@@ -76,9 +76,12 @@
         ]
     },
     {
-        "commandPort":
+        "textureWindow":
         [
-            {"name": ":7002", "sourceType": "python"}
+            {
+                "edit": True,
+                "displaySolidMap": True
+            },
         ]
     },
     {
