--- a/prefs/prefs.prefs
+++ b/prefs/prefs.prefs
@@ -87,7 +87,7 @@
     {
         "mel":
         [
-            "textureWindowToggleTextureImage( \"polyTexturePlacementPanel1\", \"textureWindow\"); refresh;",
+            "textureWindowToggleTextureImage( \"polyTexturePlacementPanel1\", \"textureWindow\"); refresh; txtWndUpdateEditor(\"polyTexturePlacementPanel1\", \"textureWindow\", \"null\", 101);",
             "txtWndUpdateEditor(\"polyTexturePlacementPanel1\", \"textureWindow\", \"null\", 101);",
             # "$gUseSaveScenePanelConfig = false;file -uc false;",
             # "$gUseScenePanelConfig = false;file -uc false;",
